--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@racehub-io/f1-telemetry-client": "^0.2.6",
     "electron-updater": "4.6.5",
+    "lodash": "^4.17.21",
     "vue": "3.2.31"
   }
 }
