--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@racehub-io/f1-telemetry-client": "^0.2.6",
     "electron-updater": "4.6.5",
     "lodash": "^4.17.21",
-    "vue": "3.2.31"
+    "vue": "3.2.31",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   }
 }
